--- a/signinwithapplebutton/src/main/res/values/attrs.xml
+++ b/signinwithapplebutton/src/main/res/values/attrs.xml
@@ -18,6 +18,8 @@
             <enum name="continueWithApple" value="1" />
         </attr>
 
+        <attr name="sign_in_with_apple_button_textAppearance" format="reference"/>
+
         <!-- Corner radius -->
         <attr name="sign_in_with_apple_button_cornerRadius" format="dimension" />
     </declare-styleable>
